--- a/install
+++ b/install
@@ -9,7 +9,7 @@ else
 fi
 
 path=$(which python3)
-sed -i "" "s%#!/Users/jjanin-r/\.brew/bin%#!$path%" computorV2
+sed -i "" "s%#!/Users/jjanin-r/\.brew/bin/python3%#!$path%" computorV2
 echo -e '\033[32mPyhton path set in shebang\033[0m'
 
 if pip3 list | grep -F numpy &>/dev/null ;
@@ -18,4 +18,12 @@ then
 else
     echo -e '\033[33mNumpy is not installed\033[0m'
     pip3 install numpy
+fi
+
+if pip3 list | grep -F matplotlib &>/dev/null ;
+then
+    echo -e '\033[32mMatplotlib is installed\033[0m'
+else
+    echo -e '\033[33mMatplotlib is not installed\033[0m'
+    pip3 install matplotlib
 fi
